--- a/doc/css/extra.css
+++ b/doc/css/extra.css
@@ -29,6 +29,14 @@ dt {
   margin: 0.25em 0 0 0;
 }
 
+dt .subtitle {
+  margin: 0 0 0 1em;
+}
+
+dt .subtitle code {
+  color: inherit;
+}
+
 dd {
   margin: 0 0 0 1.5em;
 }
